Fixed issue with page overflow, links no longer stretch full page width

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 /* Global styles */
 
 body {
+  height: 100vh;
+  max-height: 100vh;
   text-align: center;
   font-family: 'Audiowide', cursive;
   color: #fff;
@@ -15,15 +17,6 @@ h1 {
   font-family: 'Bungee Shade', cursive;
   color: #ff00a8;
   text-shadow: 0 0 20px #3600ff, 0 0 1px #ffffff, 0 0 10px #001eff, 0 0 10px #1200ff;
-}
-
-/* aligns items in center */
-.vertical-center {
-  min-height: 100%;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .btn {
